cabal-version:      3.0
name:               tenforty-spec
version:            0.1.0.0
synopsis:           Tax form specifications for tenforty
description:        Type-safe specifications of tax forms that compile to JSON
                    computation graphs for the tenforty runtime.
license:            MIT
author:             tenforty contributors
maintainer:         tenforty@example.com
category:           Finance
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  TenForty
                    , TenForty.Types
                    , TenForty.Expr
                    , TenForty.Table
                    , TenForty.PhaseOut
                    , TenForty.Form
                    , TenForty.DSL
                    , TenForty.Compile.JSON
    build-depends:    base ^>=4.17 || ^>=4.18 || ^>=4.19 || ^>=4.20
                    , aeson >=2.0 && <2.3
                    , bytestring >=0.11 && <0.13
                    , containers >=0.6 && <0.8
                    , mtl >=2.2 && <2.4
                    , text >=1.2 && <2.2
                    , vector >=0.12 && <0.14
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: DerivingStrategies
                      , GADTs
                      , DataKinds
                      , TypeFamilies
                      , LambdaCase
                      , OverloadedStrings

executable tenforty-compile
    import:           warnings
    main-is:          Main.hs
    other-modules:    US1040_2024
                    , US1040_2025
                    , USSchedule1_2024
                    , USSchedule1_2025
                    , USSchedule2_2024
                    , USSchedule2_2025
                    , USSchedule3_2024
                    , USSchedule3_2025
                    , USScheduleA_2024
                    , USScheduleA_2025
                    , USScheduleB_2024
                    , USScheduleB_2025
                    , USScheduleD_2024
                    , USScheduleD_2025
                    , USScheduleSE_2024
                    , USScheduleSE_2025
                    , USScheduleEIC_2024
                    , USScheduleEIC_2025
                    , USForm2441_2024
                    , USForm2441_2025
                    , USForm6251_2024
                    , USForm6251_2025
                    , USForm8812_2024
                    , USForm8812_2025
                    , USForm8863_2024
                    , USForm8863_2025
                    , USForm8959_2024
                    , USForm8959_2025
                    , USForm8960_2024
                    , USForm8960_2025
                    , USForm8995_2024
                    , USForm8995_2025
                    , Tables2024
                    , Tables2025
                    , CA540_2024
                    , CA540_2025
                    , CAScheduleCA_2024
                    , CAScheduleCA_2025
                    , CAFTB3506_2024
                    , CAFTB3506_2025
                    , CAFTB3514_2024
                    , CAFTB3514_2025
                    , TablesCA2024
                    , TablesCA2025
    build-depends:    base
                    , tenforty-spec
                    , aeson
                    , aeson-pretty >=0.8 && <0.9
                    , bytestring
                    , optparse-applicative >=0.16 && <0.19
                    , text
    hs-source-dirs:   app, forms
    default-language: GHC2021
    default-extensions: OverloadedStrings

test-suite tenforty-spec-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base
                    , tenforty-spec
                    , aeson
                    , bytestring
                    , containers
                    , text
                    , QuickCheck >=2.14 && <2.17
                    , hspec >=2.9 && <2.12
    hs-source-dirs:   test, forms
    other-modules:    US1040_2024
                    , US1040_2025
                    , USSchedule1_2024
                    , USSchedule1_2025
                    , USSchedule2_2024
                    , USSchedule2_2025
                    , USSchedule3_2024
                    , USSchedule3_2025
                    , USScheduleA_2024
                    , USScheduleA_2025
                    , USScheduleB_2024
                    , USScheduleB_2025
                    , USScheduleD_2024
                    , USScheduleD_2025
                    , USScheduleSE_2024
                    , USScheduleSE_2025
                    , USScheduleEIC_2024
                    , USScheduleEIC_2025
                    , USForm2441_2024
                    , USForm2441_2025
                    , USForm6251_2024
                    , USForm6251_2025
                    , USForm8812_2024
                    , USForm8812_2025
                    , USForm8863_2024
                    , USForm8863_2025
                    , USForm8959_2024
                    , USForm8959_2025
                    , USForm8960_2024
                    , USForm8960_2025
                    , USForm8995_2024
                    , USForm8995_2025
                    , Tables2024
                    , Tables2025
                    , CA540_2024
                    , CA540_2025
                    , CAScheduleCA_2024
                    , CAScheduleCA_2025
                    , CAFTB3506_2024
                    , CAFTB3506_2025
                    , CAFTB3514_2024
                    , CAFTB3514_2025
                    , TablesCA2024
                    , TablesCA2025
    default-language: GHC2021
    default-extensions: OverloadedStrings
