cabal-version: 3.0
name:          tenforty-spec
version:       0.1.0.0
synopsis:      Tax form specifications for tenforty
description:
  Type-safe specifications of tax forms that compile to JSON
  computation graphs for the tenforty runtime.

license:       MIT
author:        tenforty contributors
maintainer:    tenforty@example.com
category:      Finance
build-type:    Simple

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import:             warnings
  exposed-modules:
    TenForty
    TenForty.Compile.JSON
    TenForty.DSL
    TenForty.Expr
    TenForty.Form
    TenForty.PhaseOut
    TenForty.Table
    TenForty.Types

  build-depends:
    , aeson       >=2.0   && <2.3
    , base        ^>=4.17 || ^>=4.18 || ^>=4.19 || ^>=4.20 || ^>=4.21 || ^>=4.22
    , bytestring  >=0.11  && <0.13
    , containers  >=0.6   && <0.8
    , mtl         >=2.2   && <2.4
    , text        >=1.2   && <2.2
    , vector      >=0.12  && <0.14

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    GADTs
    LambdaCase
    OverloadedStrings
    TypeFamilies

executable tenforty-compile
  import:             warnings
  main-is:            Main.hs
  other-modules:
    ALForm40_2024
    ALForm40_2025
    AZForm140_2024
    AZForm140_2025
    CA540_2024
    CA540_2025
    CAFTB3506_2024
    CAFTB3506_2025
    CAFTB3514_2024
    CAFTB3514_2025
    CAScheduleCA_2024
    CAScheduleCA_2025
    COForm104_2024
    COForm104_2025
    GAForm500_2024
    GAForm500_2025
    IL1040_2024
    IL1040_2025
    INFormIT40_2024
    INFormIT40_2025
    KYForm740_2024
    KYForm740_2025
    LAIT540_2024
    LAIT540_2025
    MDForm502_2024
    MDForm502_2025
    MI1040_2024
    MI1040_2025
    MNFormM1_2024
    MNFormM1_2025
    MOForm1040_2024
    MOForm1040_2025
    NCFormD400_2024
    NCFormD400_2025
    NJ1040_2024
    NJ1040_2025
    NYIT201_2024
    NYIT201_2025
    OHIT1040_2024
    OHIT1040_2025
    PA40_2024
    PA40_2025
    SCForm1040_2024
    SCForm1040_2025
    Tables2024
    Tables2025
    TablesAL2024
    TablesAL2025
    TablesAZ2024
    TablesAZ2025
    TablesCA2024
    TablesCA2025
    TablesCO2024
    TablesCO2025
    TablesGA2024
    TablesGA2025
    TablesIL2024
    TablesIL2025
    TablesIN2024
    TablesIN2025
    TablesKY2024
    TablesKY2025
    TablesLA2024
    TablesLA2025
    TablesMD2024
    TablesMD2025
    TablesMI2024
    TablesMI2025
    TablesMN2024
    TablesMN2025
    TablesMO2024
    TablesMO2025
    TablesNC2024
    TablesNC2025
    TablesNJ2024
    TablesNJ2025
    TablesNY2024
    TablesNY2025
    TablesOH2024
    TablesOH2025
    TablesSC2024
    TablesSC2025
    TablesVA2024
    TablesVA2025
    TablesWI2024
    TablesWI2025
    US1040_2024
    US1040_2025
    USForm2441_2024
    USForm2441_2025
    USForm6251_2024
    USForm6251_2025
    USForm8812_2024
    USForm8812_2025
    USForm8863_2024
    USForm8863_2025
    USForm8959_2024
    USForm8959_2025
    USForm8960_2024
    USForm8960_2025
    USForm8995_2024
    USForm8995_2025
    USSchedule1_2024
    USSchedule1_2025
    USSchedule2_2024
    USSchedule2_2025
    USSchedule3_2024
    USSchedule3_2025
    USScheduleA_2024
    USScheduleA_2025
    USScheduleB_2024
    USScheduleB_2025
    USScheduleD_2024
    USScheduleD_2025
    USScheduleEIC_2024
    USScheduleEIC_2025
    USScheduleSE_2024
    USScheduleSE_2025
    VAForm760_2024
    VAForm760_2025
    WIForm1_2024
    WIForm1_2025

  build-depends:
    , aeson
    , aeson-pretty          >=0.8  && <0.9
    , base
    , bytestring
    , directory             >=1.3  && <1.4
    , optparse-applicative  >=0.16 && <0.19
    , tenforty-spec
    , text

  hs-source-dirs:     app forms
  default-language:   GHC2021
  default-extensions: OverloadedStrings

test-suite tenforty-spec-test
  import:             warnings
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , hspec          >=2.9  && <2.12
    , QuickCheck     >=2.14 && <2.17
    , tenforty-spec
    , text

  hs-source-dirs:     test forms
  other-modules:
    ALForm40_2024
    ALForm40_2025
    AZForm140_2024
    AZForm140_2025
    CA540_2024
    CA540_2025
    CAFTB3506_2024
    CAFTB3506_2025
    CAFTB3514_2024
    CAFTB3514_2025
    CAScheduleCA_2024
    CAScheduleCA_2025
    COForm104_2024
    COForm104_2025
    GAForm500_2024
    GAForm500_2025
    IL1040_2024
    IL1040_2025
    INFormIT40_2024
    INFormIT40_2025
    KYForm740_2024
    KYForm740_2025
    LAIT540_2024
    LAIT540_2025
    MDForm502_2024
    MDForm502_2025
    MI1040_2024
    MI1040_2025
    MNFormM1_2024
    MNFormM1_2025
    MOForm1040_2024
    MOForm1040_2025
    NCFormD400_2024
    NCFormD400_2025
    NJ1040_2024
    NJ1040_2025
    NYIT201_2024
    NYIT201_2025
    OHIT1040_2024
    OHIT1040_2025
    PA40_2024
    PA40_2025
    SCForm1040_2024
    SCForm1040_2025
    Tables2024
    Tables2025
    TablesAL2024
    TablesAL2025
    TablesAZ2024
    TablesAZ2025
    TablesCA2024
    TablesCA2025
    TablesCO2024
    TablesCO2025
    TablesGA2024
    TablesGA2025
    TablesIL2024
    TablesIL2025
    TablesIN2024
    TablesIN2025
    TablesKY2024
    TablesKY2025
    TablesLA2024
    TablesLA2025
    TablesMD2024
    TablesMD2025
    TablesMI2024
    TablesMI2025
    TablesMN2024
    TablesMN2025
    TablesMO2024
    TablesMO2025
    TablesNC2024
    TablesNC2025
    TablesNJ2024
    TablesNJ2025
    TablesNY2024
    TablesNY2025
    TablesOH2024
    TablesOH2025
    TablesSC2024
    TablesSC2025
    TablesVA2024
    TablesVA2025
    TablesWI2024
    TablesWI2025
    US1040_2024
    US1040_2025
    USForm2441_2024
    USForm2441_2025
    USForm6251_2024
    USForm6251_2025
    USForm8812_2024
    USForm8812_2025
    USForm8863_2024
    USForm8863_2025
    USForm8959_2024
    USForm8959_2025
    USForm8960_2024
    USForm8960_2025
    USForm8995_2024
    USForm8995_2025
    USSchedule1_2024
    USSchedule1_2025
    USSchedule2_2024
    USSchedule2_2025
    USSchedule3_2024
    USSchedule3_2025
    USScheduleA_2024
    USScheduleA_2025
    USScheduleB_2024
    USScheduleB_2025
    USScheduleD_2024
    USScheduleD_2025
    USScheduleEIC_2024
    USScheduleEIC_2025
    USScheduleSE_2024
    USScheduleSE_2025
    VAForm760_2024
    VAForm760_2025
    WIForm1_2024
    WIForm1_2025

  default-language:   GHC2021
  default-extensions: OverloadedStrings
